# fastapi-social-network

./: Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: linters.py  linters.yml  tests.yml
app/: main.py  models.py
app/api/dependencies/: authentication.py
app/api/routes/: api.py  authentication.py  users.py
app/core/: events.py
app/core/settings/: app.py  base.py  development.py  test.py
app/db/: base.py  tables.py
app/db/repositories/: base.py  users.py
app/models/: common.py
app/models/domain/: comments.py  messages.py  posts.py  snmodel.py  users.py
app/models/orm/: models.py
app/models/schemas/: models.py  snschema.py  users.py
app/resources/: strings.py
app/services/: jwt.py
tests/schemas/: test_sn_model.py
