[tool.poetry]
name = "fastapi-social-network"
version = "0.1.0"
description = ""
authors = ["Alexander Sidorov <sidai@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
flake8 = "^4.0.1"
pytest = "^7.1.2"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
